--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 fill="#333333"
               />
             </svg>
+            <a href="./users/index.html">TEMPORARY</a>
             <h3>Settings</h3>
           </a>
 
