All files has been corrected

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 fill="#333333"
               />
             </svg>
-            <a href="./users/index.html">TEMPORARY</a>
+            <!-- <a href="./users/index.html">TEMPORARY</a> -->
             <h3>Settings</h3>
           </a>
 
@@ -505,6 +505,7 @@
           </div>
         </div>
       </div>
+      <a href="./users/index.html">TEMPORARY</a>
       <!-- OVERLAY ENDS -->
     </section>
 
