--- a/users/index.html
+++ b/users/index.html
@@ -195,6 +195,71 @@
         </div>
       </div>
     </section>
+
+    <section class="container ff_download">
+      <div class="download_wrap">
+        <div class="download">
+          <h3>Download and manage Members attendee Templates.</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor
+            imperdiet aliquet velit ultricies iaculis. Sed malesuada at aliquam,
+            magna sed aliquet rhoncus. Sit egestas et fames blandit. Nunc
+            imperdiet iaculis consectetur urna tristique non donec ultricies
+            tempor. Pharetra, tempus elementum donec erat eu posuere proin
+            viverra aliquet.
+          </p>
+        </div>
+
+        <div class="d_pic">
+          <img src="./asset/imgs/download_frame.png" class="dd" />
+          <img src="./asset/imgs/table_frame.png" class="tt" />
+        </div>
+      </div>
+    </section>
+
+    <section class="container round">
+      <h2>Some words from few of our awesome customers</h2>
+      <div class="round_content"></div>
+    </section>
+
+    <footer>
+      <div class="container folic">
+        <div class="folic_wrap">
+          <div class="first_folic">
+            <h1>Your<span>Pass</span></h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas
+              lobortis enim sapien in lectus bibendum.
+            </p>
+          </div>
+
+          <ul>
+            <li class="cage">Company</li>
+            <li>About</li>
+            <li>Contact Us</li>
+            <li>Privacy Policy</li>
+            <li>Term of Service</li>
+          </ul>
+
+          <ul>
+            <li class="cage">Services</li>
+            <li>Event</li>
+          </ul>
+        </div>
+        <hr />
+        <div class="c_r">
+          <div class="footer_pic">
+            <img src="./asset/imgs/instagram.svg" alt="" />
+            <img src="./asset/imgs/youtube.svg" alt="" />
+            <img src="./asset/imgs/linkedin.svg" alt="" />
+            <img src="./asset/imgs/twitter.svg" alt="" />
+            <img src="./asset/imgs/facebook.svg" alt="" />
+          </div>
+
+          <p>&copy; 2022 Yourpass | All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
     <!-- JS -->
     <script src="./asset/js/main.js"></script>
   </body>
