All files has been corrected

--- a/users/index.html
+++ b/users/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YourPass - Manage how many people in your organisation</title>
+    <title>YourPass - Welcome Page</title>
     <meta
       name="description"
       content="Management appilication for collating data in an organisation"
@@ -17,6 +17,10 @@
     />
     <!-- <link rel="stylesheet" href="assets/css/style.css" /> -->
     <link rel="stylesheet" href="./asset/scss/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
   </head>
   <body>
     <nav>
@@ -25,7 +29,7 @@
 
         <ul class="nav_links">
           <li>
-            <a href="">Events</a>
+            <a href="recommendevent.html">Events</a>
             <a href="">About Us</a>
           </li>
           <li class="btn">
@@ -109,90 +113,7 @@
     <section class="container recommed">
       <div class="show_more">
         <h4>Recommeded Events</h4>
-        <button>View More</button>
-      </div>
-
-      <div class="card_wrap">
-        <div class="cards">
-          <img src="./asset/imgs/Event 1.png" alt="" />
-
-          <div class="card_content">
-            <h5>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rea
-              Faucibu dictum...
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi,
-              neque metus ...
-            </p>
-
-            <div class="dts">
-              <h6 class="date">Dec 20, 2022</h6>
-              <h6 class="location">Lagos</h6>
-              <h6 class="seats">10,000 seats</h6>
-            </div>
-          </div>
-        </div>
-        <div class="cards">
-          <img src="./asset/imgs/Event 1.png" alt="" />
-
-          <div class="card_content">
-            <h5>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rea
-              Faucibu dictum...
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi,
-              neque metus ...
-            </p>
-
-            <div class="dts">
-              <h6 class="date">Dec 20, 2022</h6>
-              <h6 class="location">Lagos</h6>
-              <h6 class="seats">10,000 seats</h6>
-            </div>
-          </div>
-        </div>
-        <div class="cards">
-          <img src="./asset/imgs/Event 1.png" alt="" />
-
-          <div class="card_content">
-            <h5>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rea
-              Faucibu dictum...
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi,
-              neque metus ...
-            </p>
-
-            <div class="dts">
-              <h6 class="date">Dec 20, 2022</h6>
-              <h6 class="location">Lagos</h6>
-              <h6 class="seats">10,000 seats</h6>
-            </div>
-          </div>
-        </div>
-        <div class="cards">
-          <img src="./asset/imgs/Event 1.png" alt="" />
-
-          <div class="card_content">
-            <h5>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rea
-              Faucibu dictum...
-            </h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur suscipit proin morbi mi,
-              neque metus ...
-            </p>
-
-            <div class="dts">
-              <h6 class="date">Dec 20, 2022</h6>
-              <h6 class="location">Lagos</h6>
-              <h6 class="seats">10,000 seats</h6>
-            </div>
-          </div>
-        </div>
+        <button><a href="recommendevent.html"> View More</a></button>
       </div>
     </section>
 
@@ -219,7 +140,76 @@
 
     <section class="container round">
       <h2>Some words from few of our awesome customers</h2>
-      <div class="round_content"></div>
+      <div class="round_content owl-carousel">
+        <div class="card">
+          <img src="./asset/imgs/quote_left.svg" class="quote" />
+          <p>
+            TurTurpis arcu cursus id in nunc sit sapien proin. Sem tempor, eget
+            convallis ultricies. Amet, placerat sit amet tellus porttitor
+            vestibulum, sed erat sed. Sed pellentesque ornare.
+          </p>
+          <img src="./asset/imgs/quote_RIGHT.svg" class="quote abs" />
+
+          <div class="name abss">
+            <div class="main_name">
+              <h3>Wade Warren</h3>
+              <p>CEO ,Lekki Conservation Center</p>
+            </div>
+            <img src="./asset/imgs/avatar.png" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <img src="./asset/imgs/quote_left.svg" class="quote" />
+          <p>
+            TurTurpis arcu cursus id in nunc sit sapien proin. Sem tempor, eget
+            convallis ultricies. Amet, placerat sit amet tellus porttitor
+            vestibulum, sed erat sed. Sed pellentesque ornare.
+          </p>
+          <img src="./asset/imgs/quote_RIGHT.svg" class="quote abs" />
+
+          <div class="name abss">
+            <div class="main_name">
+              <h3>Wade Warren</h3>
+              <p>CEO ,Lekki Conservation Center</p>
+            </div>
+            <img src="./asset/imgs/avatar.png" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <img src="./asset/imgs/quote_left.svg" class="quote" />
+          <p>
+            TurTurpis arcu cursus id in nunc sit sapien proin. Sem tempor, eget
+            convallis ultricies. Amet, placerat sit amet tellus porttitor
+            vestibulum, sed erat sed. Sed pellentesque ornare.
+          </p>
+          <img src="./asset/imgs/quote_RIGHT.svg" class="quote abs" />
+
+          <div class="name abss">
+            <div class="main_name">
+              <h3>Wade Warren</h3>
+              <p>CEO ,Lekki Conservation Center</p>
+            </div>
+            <img src="./asset/imgs/avatar.png" alt="" />
+          </div>
+        </div>
+        <div class="card">
+          <img src="./asset/imgs/quote_left.svg" class="quote" />
+          <p>
+            TurTurpis arcu cursus id in nunc sit sapien proin. Sem tempor, eget
+            convallis ultricies. Amet, placerat sit amet tellus porttitor
+            vestibulum, sed erat sed. Sed pellentesque ornare.
+          </p>
+          <img src="./asset/imgs/quote_RIGHT.svg" class="quote abs" />
+
+          <div class="name abss">
+            <div class="main_name">
+              <h3>Wade Warren</h3>
+              <p>CEO ,Lekki Conservation Center</p>
+            </div>
+            <img src="./asset/imgs/avatar.png" alt="" />
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
@@ -243,7 +233,7 @@
 
           <ul>
             <li class="cage">Services</li>
-            <li>Event</li>
+            <li><a href="recommendevent.html"> Event</a></li>
           </ul>
         </div>
         <hr />
@@ -261,6 +251,9 @@
       </div>
     </footer>
     <!-- JS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="./asset/js/main.js"></script>
+    <script src="./asset/js/caro.js"></script>
   </body>
 </html>
