All files has been corrected

--- a/users/details.html
+++ b/users/details.html
@@ -42,7 +42,121 @@
         </div>
       </div>
     </nav>
-    <div class="eventsbanner"></div>
+    <div class="eventsbanner">
+      <div class="container">
+        <h4>Back</h4>
+      </div>
+    </div>
+
+    <div class="container ff_details">
+      <h2>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+        vulputate in vitae...
+      </h2>
+
+      <div class="ff_location">
+        <div class="tickets">
+          <h4>Date</h4>
+          <p>Dec 20,2022</p>
+        </div>
+        <div class="tickets">
+          <h4>Location</h4>
+          <p>Abeokuta</p>
+        </div>
+        <div class="tickets">
+          <h4>Tickets</h4>
+          <p>5000 Seats</p>
+        </div>
+      </div>
+
+      <div class="about_events">
+        <h3>About This Event</h3>
+        <p>This Febuary We're Hosting: <b>Womens Crusade</b></p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+          laudantium odio unde rem incidunt quis deserunt voluptate at sunt,
+          mollitia modi esse, ratione aliquam est dignissimos assumenda
+          architecto. Repellat, quidem!
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et quasi
+          iste perferendis assumenda adipisci illum quaerat vero consequatur
+          soluta. Qui, repudiandae obcaecati. Assumenda, neque! Illum rem
+          laudantium eius corrupti quos! Blanditiis eaque eius beatae pariatur
+          eos natus unde at dolore, necessitatibus molestiae minus culpa facilis
+          praesentium laboriosam reprehenderit error voluptas magnam rerum ea
+          asperiores recusandae, quo impedit distinctio possimus! Laborum.
+          Ratione, nulla facere recusandae possimus error nesciunt doloremque,
+          quia tempora hic eveniet cum minima suscipit eligendi iusto adipisci
+          fuga voluptates excepturi consectetur labore eius soluta ipsam,
+          dolorum tempore? Sint, eveniet. Eius officiis doloribus facilis non!
+          Doloremque molestias vitae ducimus animi deserunt repellendus nisi.
+          Voluptate eaque quisquam quam facilis accusamus placeat veritatis
+          magni enim, numquam veniam exercitationem voluptatibus quis temporibus
+          vero.
+        </p>
+      </div>
+      <hr />
+    </div>
+
+    <div class="container" style="margin: 25px 0">
+      <form action="" class="fill_form">
+        <h3>Event Registration</h3>
+        <p>Register now while seats are available!</p>
+
+        <div class="main">
+          <h3>Will you be attending this event?</h3>
+
+          <div class="radio-item">
+            <input type="radio" id="ritema" name="ritem" value="ropt1" />
+            <label for="ritema">Yes</label>
+          </div>
+
+          <div class="radio-item">
+            <input type="radio" id="ritemb" name="ritem" value="ropt2" />
+            <label for="ritemb">No</label>
+          </div>
+
+          <div class="d_form">
+            <div class="form1">
+              <label for="firstname"
+                >FirstName
+                <input type="text" />
+              </label>
+              <label for="lastname"
+                >LastName
+                <input type="text" />
+              </label>
+            </div>
+            <div class="form1">
+              <label for="firstname"
+                >Email
+                <input type="text" />
+              </label>
+              <label for="lastname"
+                >Age
+                <input type="text" />
+              </label>
+            </div>
+            <div class="form1">
+              <label for="firstname"
+                >Phone
+                <input type="text" />
+              </label>
+              <label for="lastname"
+                >Address
+                <input type="text" />
+              </label>
+            </div>
+
+            <div class="drive">
+              <button type="submit">Register</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+
     <footer>
       <div class="container folic">
         <div class="folic_wrap">
